--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.3",
     "express-validator": "^6.14.2",
     "mongoose": "^5.3.2",
-    "multer": "^1.4.0"
+    "multer": "^1.4.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
