--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.3.2",
     "multer": "^1.4.0",
+    "socket.io": "^4.5.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
